# SETR_Proj1

./: CMakeLists.txt  Doxyfile  README.md
Test/: CMakeLists.txt  Makefile  hello
docs/: proj.txt
docs/html/: CMakeCCompilerId_8c.html  Item_8h.html  Item_8h.js  Item_8h_source.html  MyDLL_8c.html  MyDLL_8c.js  MyDLL_8h.html  MyDLL_8h.js  MyDLL_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_8b90b24d02da3fe7f1fae6b61567fb6a.html  dir_922ff8bb4e557a886cc34b5df365a8cd.html  dir_922ff8bb4e557a886cc34b5df365a8cd.js  dir_b4a036d34397cad71cee8cc3fe41e9d4.html  dir_c2fcf3be784993bb5c8f7c337d0d625f.html  dir_db150972232ab4e96342d2bd98b34cc1.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  main_8c.js  navtreedata.js  navtreeindex0.js  structItem.html  structItem.js  tests_8c.html  tests_8c.js
docs/html/search/: all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  files_2.js  functions_0.js  functions_1.js  searchdata.js  (+4 more)
docs/latex/: Item_8h.tex  Item_8h_source.tex  MyDLL_8c.tex  MyDLL_8h.tex  MyDLL_8h_source.tex  annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_922ff8bb4e557a886cc34b5df365a8cd.tex  files.tex  main_8c.tex  refman.tex  structItem.tex  tests_8c.tex
examples/: hello.c
src/: CMakeCache.txt  CMakeLists.txt  Person.h  main  main.c  tests.c
src/module/: Item.h  MyDLL.c  MyDLL.h  Person.h  person.h
